Fix spacing for network items

--- a/app/assets/stylesheets/network/network.css
+++ b/app/assets/stylesheets/network/network.css
@@ -24,7 +24,7 @@
 
 .network-container-right-parent {
     background-color: white;
-    height: 90vh;
+    height: 80vh;
     border-radius: 10px;
     border: 1px solid lightgray;
     overflow: scroll;
